<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnNewMessage"
        android:title="@string/new_message"
        app:showAsAction="always"
        android:icon="@drawable/baseline_create_white_18"/>

    <item
        android:icon="@drawable/baseline_more_vert_white_18"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/btnSignOut"
                android:icon="@drawable/baseline_exit_to_app_white_18"
                android:title="@string/sign_out" />

            <item
                android:id="@+id/btnDeleteAccount"
                android:icon="@drawable/baseline_delete_outline_white_18"
                android:title="@string/delete_account" />
        </menu>
    </item>
</menu>